@@ -62,6 +62,10 @@ public class AndroidApplication extends Activity implements AndroidApplicationBa
 	private int wasFocusChanged = -1;
 	private boolean isWaitingForAudio = false;
 
+	/* The device is mobile unless running under the Android Runtime for Chrome (e.g. on a Chromebook). Based on:
+	* https://github.com/google/talkback/blob/f5d564f/utils/src/main/java/com/google/android/accessibility/utils/FeatureSupport.java#L49-L51 */
+	private final boolean mobile = Build.DEVICE != null && !Build.DEVICE.matches(".+_cheets|cheets_.+");
+
 	/** This method has to be called in the {@link Activity#onCreate(Bundle)} method. It sets up all the things necessary to get
 	 * input, render via OpenGL and so on. Uses a default {@link AndroidApplicationConfiguration}.
 	 * 
@@ -322,6 +326,11 @@ public class AndroidApplication extends Activity implements AndroidApplicationBa
 	@Override
 	public int getVersion () {
 		return android.os.Build.VERSION.SDK_INT;
+	}
+
+	@Override
+	public boolean isMobile () {
+		return mobile;
 	}
 
 	@Override
