@@ -62,6 +62,10 @@ public class AndroidDaydream extends DreamService implements AndroidApplicationB
 	protected int logLevel = LOG_INFO;
 	protected ApplicationLogger applicationLogger;
 
+	/* The device is mobile unless running under the Android Runtime for Chrome (e.g. on a Chromebook). Based on:
+	 * https://github.com/google/talkback/blob/f5d564f/utils/src/main/java/com/google/android/accessibility/utils/FeatureSupport.java#L49-L51 */
+	private final boolean mobile = Build.DEVICE != null && !Build.DEVICE.matches(".+_cheets|cheets_.+");
+
 	/** This method has to be called in the Activity#onCreate(Bundle) method. It sets up all the things necessary to get input,
 	 * render via OpenGL and so on. Uses a default {@link AndroidApplicationConfiguration}.
 	 * @param listener the {@link ApplicationListener} implementing the program logic */
@@ -261,6 +265,11 @@ public class AndroidDaydream extends DreamService implements AndroidApplicationB
 	@Override
 	public int getVersion () {
 		return android.os.Build.VERSION.SDK_INT;
+	}
+
+	@Override
+	public boolean isMobile () {
+		return mobile;
 	}
 
 	@Override
