@@ -54,6 +54,10 @@ public class AndroidLiveWallpaper implements AndroidApplicationBase {
 	protected ApplicationLogger applicationLogger;
 	protected volatile Color[] wallpaperColors = null;
 
+	/* The device is mobile unless running under the Android Runtime for Chrome (e.g. on a Chromebook). Based on:
+	 * https://github.com/google/talkback/blob/f5d564f/utils/src/main/java/com/google/android/accessibility/utils/FeatureSupport.java#L49-L51 */
+	private final boolean mobile = Build.DEVICE != null && !Build.DEVICE.matches(".+_cheets|cheets_.+");
+
 	public AndroidLiveWallpaper (AndroidLiveWallpaperService service) {
 		this.service = service;
 	}
@@ -219,6 +223,11 @@ public class AndroidLiveWallpaper implements AndroidApplicationBase {
 	@Override
 	public int getVersion () {
 		return android.os.Build.VERSION.SDK_INT;
+	}
+
+	@Override
+	public boolean isMobile () {
+		return mobile;
 	}
 
 	@Override
